--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>
 <head>
 	<title>Bättre folk</title>
+	<style>
+		* {padding: 0; margin: 0;}
+		canvas {background: #eee; display: block; margin: 0 auto;}
+	</style>
+	<script src="script.js"></script>
 </head>
 <body>
-
+	<canvas id="myCanvas" width="680" height="420"></canvas>
 </body>
 </html>
